--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="">
+    <script src="https://accounts.google.com/gsi/client" async></script>
 </head>
 
 <body>
     <div id="root"></div>
+  
 </body>
 
 </html>
